--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
   "version": "1.1.5",
   "main": ["./angular.js", "./angular-cookies.js", "./angular-loader.js", "./angular-mocks.js", "./angular-resource.js", "./angular-sanitize.js"],
   "dependencies": {
-    "jQuery": ">=1.4"
+    "jquery": ">=1.4"
   }
 }
